# core

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yaml
.github/workflows/: build.yaml  release.yaml  security.yaml
crates/nvisy-archive/: Cargo.toml  README.md
crates/nvisy-archive/src/: lib.rs
crates/nvisy-archive/src/file/: archive_type.rs  mod.rs
crates/nvisy-archive/src/handler/: mod.rs  tar_handler.rs  zip_handler.rs
crates/nvisy-core/: Cargo.toml  README.md
crates/nvisy-core/src/: lib.rs
crates/nvisy-core/src/fs/: content_file.rs  content_kind.rs  content_metadata.rs  data_sensitivity.rs  data_structure_kind.rs  mod.rs  supported_format.rs
crates/nvisy-core/src/io/: content.rs  content_data.rs  content_read.rs  content_write.rs  data_reference.rs  mod.rs
crates/nvisy-core/src/path/: source.rs
crates/nvisy-engine/: Cargo.toml  README.md
crates/nvisy-error/: Cargo.toml  README.md
crates/nvisy-error/src/: lib.rs
crates/nvisy-error/src/error/: error_source.rs  error_type.rs  mod.rs
crates/nvisy-error/src/status/: health_status.rs  mod.rs  operational_state.rs  update_severity.rs
crates/nvisy-pattern/: Cargo.toml  README.md
