# https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"
members = [
    "nvisy-core",
    "nvisy-error",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false

authors = ["Nvisy Team <contact@nvisy.com>"]
repository = "https://github.com/nvisycom/core"
homepage = "https://github.com/nvisycom/core"
documentation = "https://docs.rs/nvisy"

[workspace.dependencies]
# Default features are disabled for certain dependencies to allow
# downstream workspaces/crates to selectively enable them as needed.
#
# See for more details: https://github.com/rust-lang/cargo/issues/11329
