# https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"
members = [
    "./crates/nvisy-archive",
    "./crates/nvisy-core",
    "./crates/nvisy-engine",
    "./crates/nvisy-error",
    "./crates/nvisy-pattern",
]

[workspace.package]
version = "0.1.0"
rust-version = "1.89"
edition = "2024"
license = "MIT"
publish = false

authors = ["Nvisy Team <contact@nvisy.com>"]
repository = "https://github.com/nvisycom/core"
homepage = "https://github.com/nvisycom/core"
documentation = "https://docs.rs/nvisy"

[workspace.dependencies]
# Default features are disabled for certain dependencies to allow
# downstream workspaces/crates to selectively enable them as needed.
#
# See for more details: https://github.com/rust-lang/cargo/issues/11329

# Internal crates
nvisy-archive = { path = "./crates/nvisy-archive", version = "0.1.0" }
nvisy-core = { path = "./crates/nvisy-core", version = "0.1.0" }
nvisy-engine = { path = "./crates/nvisy-engine", version = "0.1.0" }
nvisy-error = { path = "./crates/nvisy-error", version = "0.1.0" }
nvisy-pattern = { path = "./crates/nvisy-pattern", version = "0.1.0" }

# Error handling
thiserror = { version = "2.0", default-features = false }
anyhow = { version = "1.0", default-features = false }

# Serialization
serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0", default-features = false }
toml = { version = "0.9", default-features = false }

# Text processing and pattern matching
regex = { version = "1.11", default-features = false }
fancy-regex = { version = "0.16", default-features = false }
aho-corasick = { version = "1.1", default-features = false }
unicode-segmentation = { version = "1.10", default-features = false }
hipstr = { version = "0.8", default-features = false }

# Async I/O and file handling
tokio = { version = "1.47", default-features = false }
tokio-stream = { version = "0.1", default-features = false }
tokio-util = { version = "0.7", default-features = false }
futures = { version = "0.3", default-features = false }
async-trait = { version = "0.1", default-features = false }
walkdir = { version = "2.5", default-features = false }
memmap2 = { version = "0.9", default-features = false }
tempfile = { version = "3.22", default-features = false }

# Multithreading
rayon = { version = "1.11", default-features = false }

# Crypto and hashing
sha2 = { version = "0.10", default-features = false }
blake3 = { version = "1.8", default-features = false }
base64 = { version = "0.22", default-features = false }
zeroize = { version = "1.7", default-features = false }
rand = { version = "0.9", default-features = false }

# Utilities
uuid = { version = "1.6", default-features = false, features = ["v4"] }
jiff = { version = "0.2", default-features = false }
size = { version = "0.5", default-features = false }
bytes = { version = "1.10", default-features = false, features = ["serde"] }

# Macros
derive_more = { version = "2.0", default-features = false }
strum = { version = "0.27", default-features = false }

# Observability
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false }

# Testing utilities
tokio-test = { version = "0.4", default-features = false }
proptest = { version = "1.4", default-features = false }
criterion = { version = "0.7", default-features = false }
rstest = { version = "0.26", default-features = false }
