[package]
name = "nvisy-archive"
version = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
readme = "./README.md"

authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }

description = "Archive handling library for Nvisy, supports ZIP, TAR, and other archive formats"
keywords = ["archive", "zip", "tar", "compression", "extraction"]
categories = ["compression", "filesystem"]

[features]
default = ["zip", "tar"]
zip = ["dep:zip"]
tar = ["dep:tar"]

[dependencies]
# Async and I/O
tokio = { workspace = true, features = ["fs", "io-util"] }
tempfile = { workspace = true, features = [] }

# Error handling
thiserror = { workspace = true, features = [] }

# Archive formats
tar = { version = "0.4", optional = true, features = [] }
zip = { version = "5.1", optional = true, features = [] }

# Compression formats
flate2 = { version = "1.0", features = [] }
bzip2 = { version = "0.6", features = [] }
xz2 = { version = "0.1", features = [] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-test = { workspace = true }
tempfile = { workspace = true }
