# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "nvisy-engine"
version = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
readme = "./README.md"

authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["serde"]
serde = ["dep:serde"]

[dependencies]
# Internal crates
nvisy-core = { workspace = true }

# Data structures and utilities
bytes = { workspace = true, features = ["serde"] }

# Serialization (optional)
serde = { workspace = true, optional = true, features = ["derive"] }

[dev-dependencies]
serde_json = { workspace = true, features = ["std"] }
