# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "nvisy-error"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
readme = "./README.md"

authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
path = "./src/lib.rs"

[features]
default = []

[dependencies]
