# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "nvisy-error"
version = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
readme = "./README.md"

authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["serde"]
serde = ["dep:serde", "hipstr/serde", "jiff?/serde"]
jiff = ["dep:jiff"]

[dependencies]
thiserror = { workspace = true, features = ["std"] }
hipstr = { workspace = true, features = ["std"] }
strum = { workspace = true, features = ["derive"] }

serde = { workspace = true, features = ["std", "derive"], optional = true }
jiff = { workspace = true, features = ["std"], optional = true }
